vbnc/vbnc/vbnc/tests/Errors/30691.vb
Module bug
	Function Main As Integer
		Dim o As Object
		o = System.Int32
	End Function
End Module
